--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+.env
+package-lock.json
+substreams-service-websockets
+
 # Based on https://raw.githubusercontent.com/github/gitignore/main/Node.gitignore
 
 # Logs
