Added Bun client example

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "bun run index.ts",
     "test": "bun test",
     "build": "bun build --compile ./index.ts --outfile substreams-service-websockets",
-    "dev": "bun run --watch index.ts"
+    "dev": "bun run --watch index.ts",
+    "client": "bun run examples/client.ts"
   },
   "dependencies": {
     "dotenv": "latest",
