--- a/examples/expo/app.json
+++ b/examples/expo/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "my-app",
-    "slug": "my-app",
+    "name": "substreams-websockets",
+    "slug": "substreams-websockets",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
