--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "private": true,
   "version": "0.1.0",
   "description": "Substreams Service Websockets",
   "name": "substreams-service-websockets",
   "homepage": "https://github.com/pinax-network/substreams-sink-websockets",
   "type": "module",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": "./dist/index.js"
+  },
   "scripts": {
     "start": "bun run index.ts",
+    "prepublish": "tsc",
     "test": "bun test",
     "build": "bun build --compile ./index.ts --outfile substreams-service-websockets",
-    "dev": "bun run --watch index.ts",
-    "ping": "bun run examples/bun/ping.ts",
-    "subscribe": "bun run examples/bun/subscribe.ts",
-    "time": "bun run examples/bun/time.ts"
+    "dev": "bun run --watch index.ts"
   },
   "dependencies": {
     "dotenv": "latest",
