Update workflows ref: https://github.com/pinax-network/substreams-service-websockets/issues/15

--- a/.github/workflows/bun.yml
+++ b/.github/workflows/bun.yml
@@ -1,7 +1,7 @@
-name: Build
+name: Bun executable
 on:
   release:
-    types: [published]
+    types: [ published ]
 
 permissions:
   contents: write
