--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,6 @@ jobs:
       - uses: actions/checkout@v3
       - uses: oven-sh/setup-bun@v1
         with:
-          bun-version: "1.0.0"
+          bun-version: latest
       - run: bun install
       - run: bun test
