Implement tslog fixes: https://github.com/pinax-network/substreams-sink-websockets/issues/18

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "commander": "latest",
     "dotenv": "latest",
     "prom-client": "latest",
+    "tslog": "latest",
     "tweetnacl": "latest"
   },
   "devDependencies": {
