--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "commander": "latest",
     "dotenv": "latest",
+    "openapi3-ts": "latest",
     "prom-client": "latest",
     "tslog": "latest",
     "tweetnacl": "latest"
