--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "dev": "bun run --watch index.ts"
   },
   "dependencies": {
+    "@substreams/sink-entity-changes": "^0.3.4",
     "commander": "latest",
     "dotenv": "latest",
     "openapi3-ts": "latest",
     "prom-client": "latest",
+    "substreams-sink-webhook": "^0.7.2",
     "tslog": "latest",
-    "tweetnacl": "latest"
+    "tweetnacl": "latest",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "bun-types": "latest",
